// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentMappings.js returns correct mappings with both overrides and excludes 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "settingsGlobal": "Layout",
}
`;

exports[`getComponentMappings.js returns correct mappings with exclude and no overrides 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "settingsGlobal": "SettingsGlobal",
}
`;

exports[`getComponentMappings.js returns correct mappings with exclude containing non-existent component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "pageGeneral": "PageGeneral",
  "settingsGlobal": "SettingsGlobal",
}
`;

exports[`getComponentMappings.js returns correct mappings with override containing non-existent component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "pageGeneral": "Dummy",
  "settingsGlobal": "SettingsGlobal",
}
`;

exports[`getComponentMappings.js returns correct mappings with override containing non-existent content type 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "pageGeneral": "PageGeneral",
  "settingsGlobal": "SettingsGlobal",
}
`;

exports[`getComponentMappings.js returns correct mappings with overrides and no exclude 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "pageGeneral": "PageGeneral",
  "settingsGlobal": "Layout",
}
`;

exports[`getComponentMappings.js returns correct mappings with overrides but exclude contains overriden component 1`] = `
Object {
  "moduleCardGeneral": "ModuleCardGeneral",
  "moduleHero": "ModuleHero",
  "pageGeneral": "PageGeneral",
}
`;
